--- a/src/components/starships.sass
+++ b/src/components/starships.sass
@@ -1,7 +1,33 @@
 .title
     background-color: black
     color: white
-    margin-top: 0
+    margin: 0
 
 .ships-container
-    
+    margin: auto
+    padding: 50px
+    display: flex
+    flex-flow: wrap
+    justify-content: space-evenly
+
+.ship
+    background-color: black
+    color: yellow
+    margin: 15px
+    width: 350px
+    height: 200px
+    padding: 15px
+
+.links 
+    display: flex
+    justify-content: space-evenly
+    background-color: black
+    color: yellow 
+    font-size: 24px
+    margin: 0
+
+body 
+    background-image: url("https://wallpaperaccess.com/binary-sunset")
+    background-position: center
+    background-repeat: no-repeat
+    background-size: cover
