adds sass stylings, and creates better functionlaity.

--- a/src/components/starships.sass
+++ b/src/components/starships.sass
@@ -9,6 +9,7 @@
     display: flex
     flex-flow: wrap
     justify-content: space-evenly
+    background-color: black
 
 .ship
     background-color: black
@@ -17,6 +18,8 @@
     width: 350px
     height: 200px
     padding: 15px
+    border-radius: 5px
+    border: 2px solid white
 
 .links 
     display: flex
@@ -27,7 +30,4 @@
     margin: 0
 
 body 
-    background-image: url("https://wallpaperaccess.com/binary-sunset")
-    background-position: center
-    background-repeat: no-repeat
-    background-size: cover
+    background-color: black
